--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -1,5 +1,6 @@
-@control-panel-content-height: @edu-control-height-sm;
+@control-panel-gap: 4px;
 @control-panel-padding: @edu-content-padding;
+@control-panel-content-height: @edu-control-height-sm;
 @control-panel-height: @control-panel-content-height + (2 * @control-panel-padding);
 
 .ControlPanel {
@@ -21,7 +22,7 @@
   }
 
   &.ControlPanel--position2 {
-    left: %(~"calc(100% - %s)", @control-panel-height * 3 + 2);
+    left: %(~"calc(100% - %s)", @control-panel-height * 3 + @control-panel-gap);
   }
 
   &.is-open {
