--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -36,6 +36,10 @@
     &:hover .SectionDisplay-actionButton--hardDelete {
       visibility: visible;
     }
+
+    &:hover .SectionDisplay-sectionInfo--hardDelete {
+      display: grid;
+    }
   }
 }
 
@@ -91,6 +95,10 @@
   border: 1px solid @grey-5;
   border-radius: @edu-border-radius-base;
   background-color: @edu-white;
+
+  &.SectionDisplay-sectionInfo--hardDelete {
+    display: none;
+  }
 }
 
 .SectionDisplay-overlay {
