EDU-305 Minor style adjustments

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -65,6 +65,8 @@
 
 .ControlPanel-openButton {
   .m-no-spinner-background;
+  height: @control-panel-height;
+  width: @control-panel-height;
   color: lighten(@edu-primary-color, 50%);
 
   &:hover, &:focus {
