--- a/src/components/history-control-panel.less
+++ b/src/components/history-control-panel.less
@@ -4,7 +4,7 @@
 .HistoryControlPanel-leftSide {
   flex: 1 0 0%;
   display: flex;
-  align-items: baseline;
+  align-items: center;
   padding-right: 2 * @edu-content-padding;
 }
 
@@ -14,10 +14,7 @@
 
 .HistoryControlPanel-slider {
   flex: 1 0 0%;
-}
-
-.HistoryControlPanel-sliderMark {
-  color: @edu-white;
+  margin: 6px;
 }
 
 .HistoryControlPanel-rightSide {
