--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -34,7 +34,7 @@
     }
 
     &:hover .SectionDisplay-actionButton--hardDelete {
-      visibility: visible;
+      display: block;
     }
 
     &:hover .SectionDisplay-sectionInfo--hardDelete {
@@ -79,7 +79,7 @@
   }
 
   &.SectionDisplay-actionButton--hardDelete {
-    visibility: hidden;
+    display: none;
     color: @red-8;
     border-color: @red-8;
   }
