NOTICKET: Set global variables for link colors

--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -104,9 +104,9 @@
 // @iconfont-css-prefix: anticon;
 
 // // LINK
-// @link-color: @primary-color;
-// @link-hover-color: color(~`colorPalette('@{link-color}', 5) `);
-// @link-active-color: color(~`colorPalette('@{link-color}', 7) `);
+@link-color: @edu-link-color;
+@link-hover-color: @edu-link-hover-color;
+@link-active-color: @edu-link-active-color;
 // @link-decoration: none;
 // @link-hover-decoration: none;
 // @link-focus-decoration: none;
