--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -25,6 +25,9 @@
 
 // Colors
 @edu-primary-color: @blue-6;
+@edu-link-color: @edu-primary-color;
+@edu-link-hover-color: lighten(@edu-link-color, 15%);
+@edu-link-active-color: lighten(@edu-link-color, 15%);
 @edu-info-color: @edu-primary-color;
 @edu-apply-color: @green-4;
 @edu-success-color: @green-6;
