--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -1,4 +1,4 @@
-@import url('../dist/styles/main.less');
+@import url('../../dist/styles/main.less');
 
 @import (css) url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
