--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -13,6 +13,12 @@
 @edu-heading-5-size: ceil(@edu-font-size-base * 1.20);
 @edu-heading-6-size: ceil(@edu-font-size-base * 1.10);
 
+// Layering
+@edu-z-index-base-layer: 0;
+@edu-z-index-cover-layer: 1;
+@edu-z-index-overlay-layer: 1000;
+@edu-z-index-sticky-content-layer: 1001;
+
 // Layout
 @edu-content-padding: 12px;
 @edu-min-page-width: 200px;
