--- a/src/components/default-page-template.less
+++ b/src/components/default-page-template.less
@@ -17,7 +17,7 @@
   flex: none;
   width: 100%;
   position: sticky;
-  z-index: @z-index-cover-layer;
+  z-index: @edu-z-index-cover-layer;
   margin-bottom: @edu-content-padding;
 }
 
@@ -69,7 +69,7 @@
   display: flex;
   align-items: flex-start;
   position: relative;
-  z-index: @z-index-base-layer;
+  z-index: @edu-z-index-base-layer;
 
   &.DefaultPageTemplate-contentArea--fullScreen {
     align-items: center;
@@ -94,7 +94,7 @@
   justify-content: center;
   padding: @edu-content-padding;
   position: relative;
-  z-index: @z-index-base-layer;
+  z-index: @edu-z-index-base-layer;
 }
 
 .DefaultPageTemplate-footerLink {
