NOTICKET: Use ant defined color variables instead of HEX code

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -42,9 +42,9 @@
 @edu-error-color: @red-5;
 @edu-highlight-color: @red-5;
 @edu-warning-color: @gold-6;
-@edu-normal-color: #d9d9d9;
-@edu-white: #fff;
-@edu-black: #000;
+@edu-normal-color: @grey-5;
+@edu-white: @grey-1;
+@edu-black: @grey-10;
 @edu-text-color: fade(@edu-black, 85%);
 @edu-text-color-secondary: fade(@edu-black, 45%);
 @edu-text-color-inverse: @edu-white;
