--- a/src/components/default-page-template.less
+++ b/src/components/default-page-template.less
@@ -22,15 +22,12 @@
 }
 
 .DefaultPageTemplate-header {
+  .m-inverted-button;
   display: flex;
   align-items: center;
   justify-content: space-between;
   min-height: @default-page-template-header-min-height;
   background-color: @edu-primary-color;
-
-  a {
-    color: #fff;
-  }
 }
 
 .DefaultPageTemplate-headerContent {
