--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -22,6 +22,7 @@
   color: inherit;
 
   &.DefaultSiteLogo-image--small {
+    color: @edu-white;
     height: 32px;
     width: 32px;
   }
@@ -33,9 +34,11 @@
 }
 
 .DefaultSiteLogo-text {
+  color: inherit;
   margin-left: 15px;
 
   &.DefaultSiteLogo-text--small {
+    color: @edu-white;
     font-size: 25px;
   }
 
