--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -31,7 +31,7 @@
 
 // Colors
 @edu-primary-color: @blue-6;
-@edu-link-color: @edu-primary-color;
+@edu-link-color: softlight(@edu-primary-color, @edu-white);
 @edu-link-hover-color: lighten(@edu-link-color, 15%);
 @edu-link-active-color: lighten(@edu-link-color, 15%);
 @edu-info-color: @edu-primary-color;
