EDU-303 UI and functionality fixes

--- a/src/components/pages/room.less
+++ b/src/components/pages/room.less
@@ -98,3 +98,7 @@
 .Room-cardDangerActionDescription {
   display: block;
 }
+
+.Room-cardDangerActionButton {
+  margin-left: @edu-content-padding;
+}
