--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -71,17 +71,17 @@
   }
 
   &.SectionDisplay-actionButton--delete {
-    color: @red-8;
+    color: @edu-danger-color;
     &:hover, &:active, &:focus {
-      color: @red-8;
-      border-color: @red-8;
+      color: @edu-danger-color;
+      border-color: @edu-danger-color;
     }
   }
 
   &.SectionDisplay-actionButton--hardDelete {
     display: none;
-    color: @red-8;
-    border-color: @red-8;
+    color: @edu-danger-color;
+    border-color: @edu-danger-color;
   }
 }
 
