--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -40,6 +40,7 @@
 @edu-processing-color: @edu-primary-color;
 @edu-discard-color: @red-4;
 @edu-error-color: @red-5;
+@edu-danger-color: @red-8;
 @edu-highlight-color: @red-5;
 @edu-warning-color: @gold-6;
 @edu-normal-color: @grey-5;
