EDU-331 Add mixin for inverted slider colors

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -51,6 +51,14 @@
 @edu-text-color-inverse: @edu-white;
 @edu-selection-background-color: fade(@edu-primary-color, 10%);
 
+// Slider
+@edu-slider-rail-background-color: @grey-4;
+@edu-slider-rail-background-color-hover: @grey-5;
+@edu-slider-track-background-color: tint(@edu-primary-color, 40%);
+@edu-slider-track-background-color-hover: tint(@edu-primary-color, 20%);
+@edu-slider-dot-border-color: @grey-5;
+@edu-slider-dot-border-color-active: tint(@edu-primary-color, 20%);
+
 // Border radii
 @edu-border-radius-base: 2px;
 @edu-border-radius-sm: @edu-border-radius-base;
