--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -829,22 +829,22 @@
 // // Slider
 // // ---
 // @slider-margin: 10px 6px 10px;
-@slider-rail-background-color: @primary-4;
-@slider-rail-background-color-hover: @primary-3;
-@slider-track-background-color: @background-color-base;
-@slider-track-background-color-hover: #e1e1e1;
+@slider-rail-background-color: @edu-slider-rail-background-color;
+@slider-rail-background-color-hover: @edu-slider-rail-background-color-hover;
+@slider-track-background-color: @edu-slider-track-background-color;
+@slider-track-background-color-hover: @edu-slider-track-background-color-hover;
 // @slider-handle-border-width: 2px;
 // @slider-handle-background-color: @component-background;
-@slider-handle-color: @primary-4;
-@slider-handle-color-hover: @primary-3;
+@slider-handle-color: @edu-slider-track-background-color;
+@slider-handle-color-hover: @edu-slider-track-background-color-hover;
 // @slider-handle-color-focus: tint(@primary-color, 20%);
 // @slider-handle-color-focus-shadow: fade(@primary-color, 12%);
 // @slider-handle-color-tooltip-open: @primary-color;
 // @slider-handle-size: 14px;
 // @slider-handle-margin-top: -5px;
 // @slider-handle-shadow: 0;
-// @slider-dot-border-color: @border-color-split;
-// @slider-dot-border-color-active: tint(@primary-color, 50%);
+@slider-dot-border-color: @edu-slider-dot-border-color;
+@slider-dot-border-color-active: @edu-slider-dot-border-color-active;
 // @slider-disabled-color: @disabled-color;
 // @slider-disabled-background-color: @component-background;
 
