--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -113,3 +113,28 @@
     padding: @edu-content-padding 0 0 0;
   }
 }
+
+.m-antd-inverted-slider {
+  & > .ant-slider-rail {
+    background-color: tint(@edu-primary-color, 20%);
+  }
+  &:hover > .ant-slider-rail {
+    background-color: tint(@edu-primary-color, 30%);
+  }
+
+  & > .ant-slider-step > .ant-slider-dot {
+    border-color: tint(@edu-primary-color, 40%);
+  }
+  &  > .ant-slider-step > .ant-slider-dot-active {
+    border-color: tint(@edu-primary-color, 50%);
+  }
+
+  & > .ant-slider-track,
+  & > .ant-slider-handle {
+    background-color: @grey-4;
+  }
+  &:hover > .ant-slider-track,
+  &:hover > .ant-slider-handle {
+    background-color: @grey-1;
+  }
+}
