EDU-340 Add import button on top of import page and correct row selection styling

--- a/src/components/pages/import-batch-creation.less
+++ b/src/components/pages/import-batch-creation.less
@@ -5,3 +5,7 @@
 .ImportBatchCreationPage-source {
   min-width: 280px;
 }
+
+.ImportBatchCreationPage-importButton {
+  margin: (@edu-content-padding * 2) 0;
+}
