--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -59,6 +59,9 @@
 @edu-slider-dot-border-color: @grey-5;
 @edu-slider-dot-border-color-active: tint(@edu-primary-color, 20%);
 
+// Table
+@edu-table-selected-row-background-color: tint(@edu-primary-color, 95%);
+
 // Border radii
 @edu-border-radius-base: 2px;
 @edu-border-radius-sm: @edu-border-radius-base;
