--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -591,7 +591,7 @@
 // @table-body-sort-bg: #fafafa;
 // @table-row-hover-bg: @background-color-light;
 // @table-selected-row-color: inherit;
-// @table-selected-row-bg: @primary-1;
+@table-selected-row-bg: @edu-table-selected-row-background-color;
 // @table-body-selected-sort-bg: @table-selected-row-bg;
 // @table-selected-row-hover-bg: darken(@table-selected-row-bg, 2%);
 // @table-expanded-row-bg: #fbfbfb;
