EDU-346 Add info about antd layers

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -14,6 +14,7 @@
 @edu-heading-6-size: ceil(@edu-font-size-base * 1.10);
 
 // Layering
+// (should stay below 1000 as the antd layers begin there)
 @edu-z-index-base-layer: 0;
 @edu-z-index-cover-layer: 1;
 @edu-z-index-overlay-layer: 900;
