EDU-352 Correct background color of selected CDN file

--- a/src/components/repository-browser.less
+++ b/src/components/repository-browser.less
@@ -49,7 +49,7 @@
   cursor: pointer;
 
   &.RepositoryBrowser-tableRow--selected {
-    background-color: @primary-1;
+    background-color: @edu-selection-background-color;
     font-weight: bold;
   }
 
