EDU-351 Also show storage size in storage plan dropdown

--- a/src/components/pages/users.less
+++ b/src/components/pages/users.less
@@ -14,3 +14,11 @@
 
   .UsersPage-roleTag--superEditor {}
 }
+
+.UsersPage-storagePlanOption {}
+
+.UsersPage-storagePlanOptionName {}
+
+.UsersPage-storagePlanOptionSize {
+  font-size: 75%;
+}
