EDU-351 Extract default storage and CSS class

--- a/src/components/pages/users.less
+++ b/src/components/pages/users.less
@@ -15,6 +15,10 @@
   .UsersPage-roleTag--superEditor {}
 }
 
+.UsersPage-storagePlanSelect {
+  width: 100%;
+}
+
 .UsersPage-storagePlanOption {}
 
 .UsersPage-storagePlanOptionName {}
