EDU-356 Show storage tab on MySpace page

--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -529,7 +529,7 @@
 
 // // Progress
 // // --
-// @progress-default-color: @processing-color;
+@progress-default-color: @edu-progress-default-color;
 // @progress-remaining-color: @background-color-base;
 // @progress-info-text-color: @progress-text-color;
 // @progress-radius: 100px;
