--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -51,6 +51,7 @@
 @edu-text-color-secondary: fade(@edu-black, 45%);
 @edu-text-color-inverse: @edu-white;
 @edu-selection-background-color: fade(@edu-primary-color, 10%);
+@edu-progress-default-color: fade(@edu-primary-color, 60%);
 
 // Slider
 @edu-slider-rail-background-color: @grey-4;
