--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -62,6 +62,7 @@
 @import '../components/history-control-panel.less';
 @import '../components/section-display.less';
 @import '../components/lesson-metadata-modal.less';
+@import '../components/used-storage.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
