EDU-358 Add storage information to users page

--- a/src/components/pages/my-space.less
+++ b/src/components/pages/my-space.less
@@ -11,3 +11,8 @@
 .MySpacePage-usedStorageLabel {
   margin-right: 15px;
 }
+
+.MySpacePage-usedStorageBar {
+  margin: 10px 0;
+  flex: 0 1 100%;
+}
