--- a/src/components/pages/users.less
+++ b/src/components/pages/users.less
@@ -26,3 +26,16 @@
 .UsersPage-storagePlanOptionSize {
   font-size: 75%;
 }
+
+.UsersPage-reminders {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.UsersPage-actions {}
+
+.UsersPage-actionButton {
+  display: block;
+  padding: 0;
+}
