EDU-370 Set a min height for the storage browser

--- a/src/components/storage-browser.less
+++ b/src/components/storage-browser.less
@@ -1,6 +1,8 @@
 @storage-browser-filter-input-active-border-color: @orange-6;
 
-.StorageBrowser {}
+.StorageBrowser {
+  min-height: 35vh;
+}
 
 .StorageBrowser-browser {
 
