EDU-371 Enable section action shortcuts for Mac OS

--- a/src/components/section-display.less
+++ b/src/components/section-display.less
@@ -85,6 +85,19 @@
   }
 }
 
+.SectionDisplay-actionTooltip {
+  display: flex;
+  flex-direction: column;
+}
+
+.SectionDisplay-actionTooltipTitle {
+  margin-bottom: 5px;
+}
+
+.SectionDisplay-actionTooltipSubtext {
+  font-size: 11px;
+}
+
 .SectionDisplay-sectionInfo {
   display: grid;
   gap: 5px;
