--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -42,6 +42,7 @@
 @import '../components/audio-player.less';
 @import '../components/color-picker.less';
 @import '../components/storage-browser.less';
+@import '../components/storage-file-picker.less';
 @import '../components/media-control.less';
 @import '../components/deleted-section.less';
 @import '../components/credits-footer.less';
