EDU-357 Show used bytes in storage browser

--- a/src/components/pages/my-space.less
+++ b/src/components/pages/my-space.less
@@ -3,16 +3,8 @@
 }
 
 .MySpacePage-usedStorage {
+  width: 100%;
   display: flex;
   align-items: baseline;
-  margin-top: 20px;
-}
-
-.MySpacePage-usedStorageLabel {
-  margin-right: 15px;
-}
-
-.MySpacePage-usedStorageBar {
-  margin: 10px 0;
-  flex: 0 1 100%;
+  margin: 20px 0 10px 0;
 }
