--- a/src/components/used-storage.less
+++ b/src/components/used-storage.less
@@ -4,6 +4,12 @@
 
 .UsedStorage-progress {
   display: flex;
+  align-items: baseline;
+}
+
+.UsedStorage-progressLabel {
+  display: flex;
+  margin-right: 15px;
 }
 
 .UserStorage-progressPercentage {
