--- a/src/components/storage-browser.less
+++ b/src/components/storage-browser.less
@@ -15,7 +15,6 @@
 .StorageBrowser-header {
   display: flex;
   align-items: center;
-  padding-bottom: 10px;
 }
 
 .StorageBrowser-headerBreadCrumbs {
@@ -24,6 +23,12 @@
 
 .StorageBrowser-headerButtons {
   flex: none;
+}
+
+.StorageBrowser-storageUsage {
+  width: 50%;
+  min-height: 40px;
+  padding-left: 7px;
 }
 
 .StorageBrowser-browserRecordIcon {
