EDU-388 Support home page template injection

--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -15,6 +15,11 @@
 
   &.DefaultSiteLogo-link--readonly {
     cursor: inherit;
+
+    &:link, &:visited, &:active, &:hover {
+      text-decoration: none;
+      color: @edu-primary-color;
+    }
   }
 }
 
