--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -18,6 +18,8 @@
 
 // React components
 @import '../components/default-page-template.less';
+@import '../components/default-page-header.less';
+@import '../components/default-page-footer.less';
 @import '../components/default-site-logo.less';
 @import '../components/error-page.less';
 @import '../components/pages/index.less';
