--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -2,6 +2,7 @@
 
 // Font override:
 @import url('./bundles/lato-font.less');
+@import url('./bundles/home-page-template.less');
 
 @testapp-primary-color: #0d6868;
 
