EDU-399 Change header towards new OMA layout

--- a/src/components/default-site-logo.less
+++ b/src/components/default-site-logo.less
@@ -1,53 +1,6 @@
 .DefaultSiteLogo {
+  margin: 35px 0;
+  font-size: 40px;
+  text-align: center;
   color: @edu-primary-color;
-
-  &:link, &:visited, &:active, &:hover {
-    text-decoration: none;
-    color: @edu-primary-color;
-  }
-}
-
-.DefaultSiteLogo-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: inherit;
-
-  &.DefaultSiteLogo-link--readonly {
-    cursor: inherit;
-
-    &:link, &:visited, &:active, &:hover {
-      text-decoration: none;
-      color: @edu-primary-color;
-    }
-  }
-}
-
-.DefaultSiteLogo-image {
-  color: inherit;
-
-  &.DefaultSiteLogo-image--small {
-    color: @edu-white;
-    height: 32px;
-    width: 32px;
-  }
-
-  &.DefaultSiteLogo-image--normal {
-    height: 50px;
-    width: 50px;
-  }
-}
-
-.DefaultSiteLogo-text {
-  color: inherit;
-  margin-left: 15px;
-
-  &.DefaultSiteLogo-text--small {
-    color: @edu-white;
-    font-size: 25px;
-  }
-
-  &.DefaultSiteLogo-text--normal {
-    font-size: 40px;
-  }
 }
