EDU-399 Separate padding variables and move page padding into template

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -3,6 +3,7 @@
 @control-panel-content-height: @edu-control-height-sm;
 @control-panel-height: @control-panel-content-height + (2 * @control-panel-padding);
 
+
 .ControlPanel {
   .m-inverted-button;
   display: flex;
@@ -36,8 +37,8 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding-left: @control-panel-padding;
-  padding-right: @control-panel-padding;
+  padding-left: @edu-page-content-padding;
+  padding-right: @edu-page-content-padding;
 }
 
 .ControlPanel-contentLeft {
