--- a/src/components/default-page-footer.less
+++ b/src/components/default-page-footer.less
@@ -3,9 +3,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: @edu-content-padding;
   position: relative;
   z-index: @edu-z-index-base-layer;
+  padding: @edu-page-content-padding;
 }
 
 .DefaultPageFooter-link {
