--- a/src/components/default-page-header.less
+++ b/src/components/default-page-header.less
@@ -2,8 +2,7 @@
   top: 0;
   flex: none;
   width: 100%;
-  padding: @edu-content-padding;
-  padding-bottom: 2 * @edu-content-padding;
+  padding: @edu-page-content-padding;
 }
 
 .DefaultPageHeader-header {
