--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -16,7 +16,7 @@
   z-index: @edu-z-index-sticky-content-layer;
   position: sticky;
   background-color: @grey-1;
-  margin-bottom: @edu-content-padding;
+  margin-bottom: @edu-page-content-padding;
 }
 
 .ErrorPage-header {
@@ -26,7 +26,7 @@
 
 .ErrorPage-headerContent {
   display: block;
-  padding: @edu-content-padding;
+  padding: @edu-page-content-padding;
 
   &.ErrorPage-headerContent--left {
     flex: 1 0 0%;
@@ -93,7 +93,7 @@
   z-index: @edu-z-index-cover-layer;
   align-items: center;
   justify-content: center;
-  padding: @edu-content-padding;
+  padding: @edu-page-content-padding;
 }
 
 .ErrorPage-footerLink {
