--- a/src/components/pages/complete-password-reset.less
+++ b/src/components/pages/complete-password-reset.less
@@ -1,6 +1,4 @@
-.CompletePasswordResetPage {
-  .m-content-fullscreen;
-}
+.CompletePasswordResetPage {}
 
 .CompletePasswordResetPage-title {
   text-align: center;
