--- a/src/components/pages/complete-registration.less
+++ b/src/components/pages/complete-registration.less
@@ -1,6 +1,4 @@
-.CompleteRegistrationPage {
-  .m-content-fullscreen;
-}
+.CompleteRegistrationPage {}
 
 .CompleteRegistrationPage-title {
   text-align: center;
