--- a/src/components/pages/room-membership-confirmation.less
+++ b/src/components/pages/room-membership-confirmation.less
@@ -1,6 +1,4 @@
-.RoomMembershipConfirmationPage {
-  .m-content-fullscreen;
-}
+.RoomMembershipConfirmationPage {}
 
 .RoomMembershipConfirmationPage-title {
   text-align: center;
