--- a/src/styles/mixins.less
+++ b/src/styles/mixins.less
@@ -1,14 +1,14 @@
-.m-content {
-  padding: @edu-content-padding;
+.m-page-content {
+  padding: @edu-page-content-padding;
 }
 
 .m-fullscreen {
   padding-bottom: 20vh;
 }
 
-.m-content-fullscreen {
-  .m-content;
-  .m-fullscreen
+.m-page-content-fullscreen {
+  .m-page-content;
+  .m-fullscreen;
 }
 
 .m-inverted-button {
