--- a/src/components/default-page-footer.less
+++ b/src/components/default-page-footer.less
@@ -1,11 +1,11 @@
 .DefaultPageFooter {
+  .m-page-content;
   flex: none;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   z-index: @edu-z-index-base-layer;
-  padding: @edu-page-content-padding;
 }
 
 .DefaultPageFooter-link {
