--- a/src/components/default-page-header.less
+++ b/src/components/default-page-header.less
@@ -1,8 +1,8 @@
 .DefaultPageHeader {
+  .m-page-content;
   top: 0;
   flex: none;
   width: 100%;
-  padding: @edu-page-content-padding;
 }
 
 .DefaultPageHeader-header {
