--- a/src/components/error-page.less
+++ b/src/components/error-page.less
@@ -25,8 +25,8 @@
 }
 
 .ErrorPage-headerContent {
+  .m-page-content;
   display: block;
-  padding: @edu-page-content-padding;
 
   &.ErrorPage-headerContent--left {
     flex: 1 0 0%;
@@ -88,12 +88,12 @@
 }
 
 .ErrorPage-footer {
+  .m-page-content;
   flex: none;
   display: flex;
   z-index: @edu-z-index-cover-layer;
   align-items: center;
   justify-content: center;
-  padding: @edu-page-content-padding;
 }
 
 .ErrorPage-footerLink {
