EDU-407 Make profile picture round

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -69,6 +69,7 @@
 // Pure CSS components
 @import '../styles/tabs.less';
 @import '../styles/panel.less';
+@import '../styles/avatar.less';
 
 // Plugin styles
 @import '../plugins/anavis/anavis.less';
