--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -51,6 +51,7 @@
 @import '../components/document-import-table.less';
 @import '../components/ui-language-dialog.less';
 @import '../components/localization/country-flag-and-name.less';
+@import '../components/localization/language-icon.less';
 @import '../components/import-type-icon.less';
 @import '../components/cookie-consent-drawer.less';
 @import '../components/rooms-tab.less';
