EDU-401 Display results count in headline

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -1,8 +1,7 @@
 .SearchPage {}
 
-.SearchPage-header {
-  margin: 25px 0;
-  max-width: 600px;
+.SearchPage-headline {
+  padding-bottom: @edu-content-padding;
 }
 
 .SearchPage-controls {
