EDU-401 Use custom tag component

--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -34,3 +34,8 @@
   padding-top: @edu-content-padding;
   padding-bottom: 2 * @edu-content-padding;
 }
+
+.SearchPage-cellTags {
+  display: flex;
+  justify-content: flex-start;
+}
