--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -67,6 +67,7 @@
 @import '../components/lesson-metadata-modal.less';
 @import '../components/used-storage.less';
 @import '../components/metadata-title.less';
+@import '../components/tag.less';
 
 // Pure CSS components
 @import '../styles/tabs.less';
