EDU-409 Use new icons
* Adjust usage of previously imported icons to match new style

--- a/src/components/control-panel.less
+++ b/src/components/control-panel.less
@@ -63,5 +63,8 @@
   .m-no-spinner-background;
   height: @control-panel-height;
   width: @control-panel-height;
-}
 
+  & .anticon {
+    font-size: 0.6 * @control-panel-height;
+  }
+}
