--- a/src/components/tag.less
+++ b/src/components/tag.less
@@ -1,4 +1,3 @@
-@tag-color: @grey-3;
 @tag-text-vertical-padding: 3px;
 
 .Tag {
@@ -7,8 +6,7 @@
   justify-content: center;
   padding: @tag-text-vertical-padding 16px;
   border-radius: 22px;
-  background-color: @tag-color;
-  border: 1px solid @tag-color;
+  background-color: @grey-3;
   font-size: 12px;
   margin: 0 5px;
 
@@ -18,11 +16,16 @@
   &:last-of-type {
     margin-right: 0;
   }
+
+  &.is-selected {
+    color: @edu-white;
+    background-color: @edu-primary-color;
+  }
 }
 
 .Tag-close {
   color: inherit;
-  padding: @tag-text-vertical-padding 0 @tag-text-vertical-padding 10px;
+  padding: @tag-text-vertical-padding 0 @tag-text-vertical-padding 12px;
 
   &:visited, &:active, &:hover {
     color: inherit;
