EDU-404 Add title to document and lesson page

--- a/src/components/pages/lesson.less
+++ b/src/components/pages/lesson.less
@@ -1,7 +1,7 @@
 .LessonPage {}
 
 .LessonPage-breadcrumbs {
-  padding: @edu-content-padding;
+  padding: @edu-content-padding 0;
 }
 
 .LessonPage-editControlPanelItem {
