EDU-401 Use antd Tag instead of custom one and just apply styling

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -67,12 +67,13 @@
 @import '../components/lesson-metadata-modal.less';
 @import '../components/used-storage.less';
 @import '../components/metadata-title.less';
-@import '../components/tag.less';
 
 // Pure CSS components
+@import '../styles/tag.less';
 @import '../styles/tabs.less';
 @import '../styles/panel.less';
 @import '../styles/avatar.less';
+
 
 // Plugin styles
 @import '../plugins/anavis/anavis.less';
