--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -9,6 +9,7 @@
   background-color: @grey-3;
   font-size: 12px;
   margin: 0 5px;
+  border: none;
 
   &:first-of-type {
     margin-left: 0;
@@ -17,7 +18,7 @@
     margin-right: 0;
   }
 
-  &.is-selected {
+  &.Tag--selected {
     color: @edu-white;
     background-color: @edu-primary-color;
   }
