EDU-401 Change tag close icon

--- a/src/styles/tag.less
+++ b/src/styles/tag.less
@@ -21,14 +21,9 @@
   &.Tag--selected {
     color: @edu-white;
     background-color: @edu-primary-color;
-  }
-}
 
-.Tag-close {
-  color: inherit;
-  padding: @tag-text-vertical-padding 0 @tag-text-vertical-padding 12px;
-
-  &:visited, &:active, &:hover {
-    color: inherit;
+    & > .ant-tag-close-icon {
+      color: @edu-white;
+    }
   }
 }
