EDU-403 Change links styling

--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -107,7 +107,7 @@
 @link-color: @edu-link-color;
 @link-hover-color: @edu-link-hover-color;
 @link-active-color: @edu-link-active-color;
-// @link-decoration: none;
+@link-decoration: @edu-link-decoration;
 // @link-hover-decoration: none;
 // @link-focus-decoration: none;
 // @link-focus-outline: 0;
