--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -34,9 +34,10 @@
 
 // Colors
 @edu-primary-color: @blue-6;
-@edu-link-color: softlight(@edu-primary-color, @edu-white);
-@edu-link-hover-color: lighten(@edu-link-color, 15%);
-@edu-link-active-color: lighten(@edu-link-color, 15%);
+@edu-link-color: inherit;
+@edu-link-decoration: underline;
+@edu-link-hover-color: inherit;
+@edu-link-active-color: inherit;
 @edu-info-color: @edu-primary-color;
 @edu-apply-color: @green-4;
 @edu-success-color: @green-6;
