EDU-402 Create a custom table component wrapping Antd table

--- a/src/styles/antd-overrides.less
+++ b/src/styles/antd-overrides.less
@@ -141,11 +141,11 @@
 // @outline-color: @primary-color;
 // @outline-fade: 20%;
 
-// @background-color-light: hsv(0, 0, 98%); // background of header and selected item
-// @background-color-base: hsv(0, 0, 96%); // Default grey background color
+@background-color-light: @edu-background-color-light;
+@background-color-base: @edu-background-color-base;
 
 // // Disabled states
-// @disabled-color: fade(#000, 25%);
+@disabled-color: @edu-disabled-color;
 // @disabled-bg: @background-color-base;
 // @disabled-active-bg: tint(@black, 90%);
 // @disabled-color-dark: fade(#fff, 35%);
