--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -53,8 +53,11 @@
 @edu-text-color: fade(@edu-black, 85%);
 @edu-text-color-secondary: fade(@edu-black, 45%);
 @edu-text-color-inverse: @edu-white;
+@edu-disabled-color: fade(@edu-black, 25%);
 @edu-selection-background-color: fade(@edu-primary-color, 10%);
 @edu-progress-default-color: fade(@edu-primary-color, 60%);
+@edu-background-color-base: @grey-4;
+@edu-background-color-light: @grey-3;
 
 // Slider
 @edu-slider-rail-background-color: @grey-4;
