EDU-412 Replace DeleteOutlined icon with custom icon

--- a/src/components/storage-browser.less
+++ b/src/components/storage-browser.less
@@ -68,6 +68,9 @@
 
 .StorageBrowser-tableDeleteCell {
   color: @edu-error-color;
+  &:hover, &:active, &:focus {
+    color: @edu-danger-color;
+  }
 }
 
 .StorageBrowser-filterInput {
