--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -68,6 +68,7 @@
 @import '../components/used-storage.less';
 @import '../components/metadata-title.less';
 @import '../components/table.less';
+@import '../components/delete-button.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
