EDU-412 Change a few more antd icons with custom ones

--- a/src/plugins/anavis/anavis.less
+++ b/src/plugins/anavis/anavis.less
@@ -111,3 +111,25 @@
     }
   }
 }
+
+.AnavisEditor-annotation {
+  display: flex;
+  align-items: baseline;
+  margin-top: 4px;
+
+  &:first-of-type {
+    margin-top: 0;
+  }
+}
+
+.AnavisEditor-annotationInput {
+  flex: 1 0 0%;
+}
+
+.AnavisEditor-annotationDelete {
+  width: 40px;
+  margin-left: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
