--- a/src/components/pages/search.less
+++ b/src/components/pages/search.less
@@ -48,3 +48,34 @@
   flex-wrap: wrap;
   justify-content: flex-start;
 }
+
+.SearchPage-cellTagsExpandLink {
+  font-size: 0.9em;
+  display: inline-block;
+  margin-left: 0.2em;
+  height: 20px;
+  padding: 3px;
+  margin: 3px;
+  margin-left: 1em;
+}
+
+.SearchPage-titleCell {
+  display: block;
+  text-decoration: none;
+}
+
+.SearchPage-titleCellTitle {
+  font-size: 1.25em;
+  font-weight: bold;
+}
+
+.SearchPage-titleCellDescription {
+  margin-top: 0.2em;
+  color: fade(@edu-text-color, 80%);
+}
+
+.SearchPage-titleCellDates {
+  margin-top: 0.75em;
+  font-size: 0.9em;
+  color: fade(@edu-text-color, 66%);
+}
