EDU-431 Make checkboxes boxier

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -73,6 +73,7 @@
 // Border radii
 @edu-border-radius-base: 8px;
 @edu-border-radius-sm: @edu-border-radius-base;
+@edu-border-radius-boxy: 2px;
 
 // Responsiveness
 @edu-breakpoint-xs: 480px;
