--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -9,12 +9,15 @@
 
 // Shared educandu styles and variables
 @import './global-variables.less';
-@import './antd-overrides.less';
 @import './fontawesome.less';
 @import './utilities.less';
 @import './elements.less';
 @import './mixins.less';
 @import './greys.less';
+
+// Antd overrides
+@import './antd-style-overrides.less';
+@import './antd-variable-overrides.less';
 
 // React components
 @import '../components/default-page-template.less';
