--- a/test-app/src/main.less
+++ b/test-app/src/main.less
@@ -1,16 +1,25 @@
 @import url('../../src/styles/main.less');
 
-// Font override:
+// Styles for OMA:
+@import url('./bundles/site-logo.less');
 @import url('./bundles/lato-font.less');
+@import url('./bundles/page-header.less');
+@import url('./bundles/page-footer.less');
+@import url('./bundles/page-template.less');
 @import url('./bundles/home-page-template.less');
+@import url('./bundles/home-page-illustration.less');
 
-@testapp-primary-color: #0d6868;
+@oma-blue-1: #F2F5F8;
+@oma-blue-2: #4F608E;
+@oma-orange-1: #F5E3D6;
+@oma-orange-2: #EAA58D;
+@oma-primary-color: #6D8BB1;
 
 // Override educandu styles:
 @edu-font-family: 'Lato', sans-serif;
-@edu-primary-color: @testapp-primary-color;
-@edu-processing-color: @testapp-primary-color;
-@edu-info-color: lighten(@testapp-primary-color, 12%);
+@edu-primary-color: @oma-primary-color;
+@edu-processing-color: @oma-primary-color;
+@edu-info-color: lighten(@oma-primary-color, 12%);
 @edu-success-color: #369911;
 @edu-error-color: #b11200;
 @edu-warning-color: #fa8c16;
