EDU-417 Add custom alert

--- a/src/styles/global-variables.less
+++ b/src/styles/global-variables.less
@@ -34,6 +34,8 @@
 
 // Colors
 @edu-primary-color: @blue-6;
+@edu-secondary-color-light: #F5E3D6;
+@edu-secondary-color-dark: #EAA58D;
 @edu-link-color: inherit;
 @edu-link-decoration: underline;
 @edu-link-hover-color: inherit;
