--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -72,6 +72,7 @@
 @import '../components/metadata-title.less';
 @import '../components/table.less';
 @import '../components/delete-button.less';
+@import '../components/alert.less';
 
 // Pure CSS components
 @import '../styles/tag.less';
